@@ -8,11 +8,12 @@
 
 my ($self, $line) = @_;
 my @f = split /\s+/, $line;
-my $call = uc $f[0];
 
 # check for callsign
 return (1, $self->msg('e5')) if $self->priv < 5;
 return (1, $self->msg('e12')) if !$f[0];
+
+my $call = uc $f[0];
 return (1, $self->msg('e11')) if $call eq $main::mycall;
 
 my $ref = DXCluster->get_exact($call);
