@@ -42,14 +42,14 @@ use vars qw(%channels %valid);
 		  user => '9,DXUser ref',
 		  startt => '0,Start Time,atime',
 		  t => '9,Time,atime',
-		  pc50_t => '9,Last PC50 Time,atime',
+		  pc50_t => '5,Last PC50 Time,atime',
 		  priv => '9,Privilege',
 		  state => '0,Current State',
 		  oldstate => '5,Last State',
 		  list => '9,Dep Chan List',
 		  name => '0,User Name',
-		  consort => '9,Connection Type',
-		  'sort' => '9,Type of Channel',
+		  consort => '5,Connection Type',
+		  'sort' => '5,Type of Channel',
 		  wwv => '0,Want WWV,yesno',
 		  wx => '0,Want WX,yesno',
 		  talk => '0,Want Talk,yesno',
@@ -59,20 +59,20 @@ use vars qw(%channels %valid);
 		  dx => '0,DX Spots,yesno',
 		  redirect => '0,Redirect messages to',
 		  lang => '0,Language',
-		  func => '9,Function',
+		  func => '5,Function',
 		  loc => '9,Local Vars', # used by func to store local variables in
 		  beep => '0,Want Beeps,yesno',
-		  lastread => '9,Last Msg Read',
-		  outbound => '9,outbound?,yesno',
+		  lastread => '5,Last Msg Read',
+		  outbound => '5,outbound?,yesno',
 		  remotecmd => '9,doing rcmd,yesno',
 		  pagelth => '0,Page Length',
 		  pagedata => '9,Page Data Store',
 		  group => '0,Access Group,parray',	# used to create a group of users/nodes for some purpose or other
-		  isolate => '9,Isolate network,yesno',
-		  delayed => '9,Delayed messages,parray',
-		  annfilter => '9,Announce Filter',
-		  wwvfilter => '9,WWV Filter',
-		  spotfilter => '9,Spot Filter',
+		  isolate => '5,Isolate network,yesno',
+		  delayed => '5,Delayed messages,parray',
+		  annfilter => '5,Announce Filter',
+		  wwvfilter => '5,WWV Filter',
+		  spotfilter => '5,Spot Filter',
 		  passwd => '9,Passwd List,parray',
 		 );
 
