@@ -52,28 +52,28 @@ $badmsgfn = "$msgdir/badmsg.pl";  # list of TO address we wont store
 $forwardfn = "$msgdir/forward.pl";  # the forwarding table
 
 %valid = (
-		  fromnode => '9,From Node',
-		  tonode => '9,To Node',
+		  fromnode => '5,From Node',
+		  tonode => '5,To Node',
 		  to => '0,To',
 		  from => '0,From',
 		  t => '0,Msg Time,cldatetime',
-		  private => '9,Private',
+		  private => '5,Private',
 		  subject => '0,Subject',
 		  linesreq => '0,Lines per Gob',
-		  rrreq => '9,Read Confirm',
+		  rrreq => '5,Read Confirm',
 		  origin => '0,Origin',
 		  lines => '5,Data',
 		  stream => '9,Stream No',
-		  count => '9,Gob Linecnt',
-		  file => '9,File?,yesno',
-		  gotit => '9,Got it Nodes,parray',
-		  lines => '9,Lines,parray',
-		  'read' => '9,Times read',
+		  count => '5,Gob Linecnt',
+		  file => '5,File?,yesno',
+		  gotit => '5,Got it Nodes,parray',
+		  lines => '5,Lines,parray',
+		  'read' => '5,Times read',
 		  size => '0,Size',
 		  msgno => '0,Msgno',
 		  keep => '0,Keep this?,yesno',
-		  lastt => '9,Last processed,cldatetime',
-		  waitt => '9,Wait until,cldatetime',
+		  lastt => '5,Last processed,cldatetime',
+		  waitt => '5,Wait until,cldatetime',
 		 );
 
 sub DESTROY
